FIxed spaces and text alignment

--- a/css/nietoarranz-2025.webflow.css
+++ b/css/nietoarranz-2025.webflow.css
@@ -46,8 +46,12 @@ li {
   height: 60vh;
 }
 
-.header-spacer.header-start, .header-spacer.header-home {
+.header-spacer.header-start {
   height: 350px;
+}
+
+.header-spacer.header-home {
+  height: 40vh;
 }
 
 .header-title {
@@ -537,7 +541,7 @@ li {
 
 .project-text {
   color: var(--_my-variables---text-secondary);
-  text-align: right;
+  text-align: left;
   font-family: Tabular Variable, Arial, sans-serif;
   font-weight: 400;
   line-height: 1.4;
